--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gulp-remove-html",
+  "name": "gulp-html-remove",
   "description": "Cleans out HTML nodes which contain specified attributes.",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "homepage": "https://github.com/gevgeny/gulp-html-remove",
   "author": {
     "name": "Eugene Gluhotorenko",
