--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-html-remove",
-  "description": "Cleans out HTML nodes which contain specified attributes.",
+  "description": "Cleans out HTML nodes by CSS selectors or attributes.",
   "version": "0.0.3",
   "homepage": "https://github.com/gevgeny/gulp-html-remove",
   "author": {
